lostCTRL/force-app/main/default/objects/Comments__c/fields/movieId__c.field-meta.xml
<CustomField>
    <fullName>movieId__c</fullName>
    <label>movieId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>