lostCTRL/force-app/main/default/objects/Comments__c/fields/rating__c.field-meta.xml
<CustomField>
    <fullName>rating__c</fullName>
    <label>rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>